--- a/auth_and_static/templates/register.html
+++ b/auth_and_static/templates/register.html
@@ -12,14 +12,14 @@
     <p>user {{ created }} succesfully created</p>
 {% elif used_name %}
     <p>user name {{ used_name }} has already used</p>
-    <form action="{% url 'taskshower:register' %}"  method="post">
+    <form action="{% url 'auth_and_static:register' %}"  method="post">
         {% csrf_token %}
         <input type="text" name="user_name" id="user_name" value="{{used_name}}">
         <input type="password" name="password" id="password">
         <input type="submit" value="submit">
     </form>
 {% else %}
-    <form action="{% url 'taskshower:register' %}"  method="post">
+    <form action="{% url 'auth_and_static:register' %}"  method="post">
         {% csrf_token %}
         <input type="text" name="user_name" id="user_name" placeholder="user name">
         <input type="password" name="password" id="password">
@@ -27,7 +27,7 @@
     </form>
 {% endif %}
 
-<p>already has account? <a href="{% url 'taskshower:login' %}">login</a> </p>
+<p>already has account? <a href="{% url 'auth_and_static:login' %}">login</a> </p>
 
 
 {% if any_data %}
